<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/athleteNewName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/athleteName"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/athleteNewSportName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/sportName"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/athleteNewCountry"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/country"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/athleteNewBestPerformance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/bestPerformance"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/athleteNewMedals"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/medals"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/athleteNewFacts"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/facts"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

</LinearLayout>