<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/eventsNewName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/eventName"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/eventsNewDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/eventsNewDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="8"
        android:hint="@string/description"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>



</LinearLayout>