<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:id="@+id/newsNewMain">

    <EditText
        android:id="@+id/newsNewImageUrl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/imageUrl"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/newsNewTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/newsNewDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="8"
        android:hint="@string/description"
        android:textColorHint="@color/black"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:autofillHints="name"/>
</LinearLayout>